welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:9: error: Unit does not take parameters
marquePage() 
          ^