welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
}

def marquePage{
  baisseBrosse()
  leveBrosse()
}

marquePage()